--- a/index.html
+++ b/index.html
@@ -55,7 +55,16 @@
                 
                  <button type="button" class="button" data-modal-open> Заказать услугу</button>
                   <div class="modal-fon is-hidden" data-modal>
-                          <div class="modal">  <button class="button-modal" type="button" data-modal-close><svg class="icon-close"> <use href="./symbol-defs.svg#icon-close"></use> </svg> </button>   </div>
+                          <div class="modal"> 
+                             <button class="button-modal" type="button" data-modal-close><svg class="icon-close"><use href="./symbol-defs.svg#icon-close"></use></svg></button>
+                             <form action="">
+                                <label for=""> <input type="text"></label>
+                                <label for=""> <input type="text"></label>
+                                <label for=""> <input type="text"></label>
+                                <textarea name="" id="" cols="30" rows="10"></textarea>
+                                <button type="submit"></button>
+                             </form>
+                            </div>
                           
                   </div>
                 </div>
